test/fixtures/public/fail/semantic/funcNotFound.jmm
/*  REASON:
    Variable assignments to literals must have the literal be the variable's type.
*/

class T {

    int a;
    boolean k;

       public boolean ola(boolean a, int b){
         return true;
     }

      public boolean ola(int a, int b){
         return true;
     }

      public boolean foo(boolean a, int b){
             this.ola(k, 1);
             return true;
        }

    public static void main(String[] a) {
        int i;
        boolean c;
        i=this.a;
        io.println(10);
        this.foo(c, a);
    }

 


}


